# abstract_tls

./: .gitignore  Dockerfile  README.md  cfgparse.py  configparser.py  environment.yml  feature_extraction.py  multinode_cfg.yml  resultlogger.py  runner.py  setup.cfg  split_log.py  stratego_agents.py  test_traci_setup.py  testing_trips.py  tlsagent.py
configs/: block.yml  cross_standart_ops.yml  cross_stratego.yml  debug.yml  example_block.yml  example_cross.yml  multinode_cfg.yml  stratego.yml
data/: pedestrians.rou.xml
docs/: demand_generation.md  extend_framework.md  prepare_network.md  run_configuration.md
examples/cross/: lane_groups.json
examples/cross/stratego/: binary_phases.xml  cross.xml  cross_binary.xml  cross_mpc.q  cross_mpc.xml  cross_mpc_template.xml  cross_mpc_template_sim.xml  four_phase.xml  model.xml
examples/cross/sumo/demands/: cyclists.rou.xml  pedestrians.rou.xml
examples/cross/sumo/det/: radars.det.xml
examples/cross/sumo/networks/: cross5_w_yellow.tll.xml  cross_early_bike_on_demand_ped.xml  cross_standart_left.tll.xml  cross_standart_wt.tll.xml
examples/cross/sumo/tll/: cross_standart.tll.xml  cross_standart_left_wt.tll.xml
metrics/: output_app.py  output_helper.py  tripinfostats.py
scripts/: encodesumophases.py  expand_tls.py
stratego/: four_phase_template_sim.xml
sumo/: vehicles.rou.xml
test/: README.md  test_feature_extraction.py  test_tripinfostats.py
test/data/: routes.rou.xml
test/data/metrics/: tripinfo.xml  tripinfo_with_emit.xml
tlsagents/: __init__.py  actuated.py  base.py  stratego_agents.py
