[metadata]
name = sumotlslab
version = 0.0.1
author = Mihhail Samusev
author_email = msam@build.aau.dk
description = Benchmarking environment for SUMO traffic light controllers
long_description = file: README.md
keywords= traffic lights, control, SUMO, benchmarks
license = MIT
license_file = docs/LICENSE
long_description_content_type = text/markdown 
project_urls =
    Source = https://github.com/mihsamusev/sumotlslab
    Tracker = https://github.com/mihsamusev/sumotlslab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
platforms = any
python_requires = >=3.6
py_modules = sumotlslab

[options.extras_require]
test = pytest